refactor tb generation to use dates - refactor generation of tb to use date for start and end
