# lib/handlers/postAccount.js
@@ -7,7 +7,7 @@
  *   accountCode {integer} Unique code for the new account.
  *   accountName {string} Name for new account.
  *   toIncrease {string} Posting to increase account.
- *   accountClassification {string} Is this a 'Balance sheet' or 'P or L' account.
+ *   isPorL {boolean} Is this a 'P or L' or 'Balance sheet' account.
  *   accountType {string}
  *   subAccountType {string}
  *   memo {string} Some description of the account.
@@ -34,9 +34,9 @@ function checkBook(req, res, next) {
 exports.handler = function postAccount(req, res, next) {
     let id = parseInt(req.params.bookId);
     let acctCode = parseInt(req.body.accountCode);
-    const { accountName, toIncrease, accountClassification, accountType, subAccountType, memo } = req.body;
+    const { accountName, toIncrease, isPorL, accountType, subAccountType, memo } = req.body;
 
-    Account.getOrCreateBook(acctCode, accountName, toIncrease, accountClassification, accountType, subAccountType, memo, id).then(result => {
+    Account.getOrCreateBook(acctCode, accountName, toIncrease, isPorL, accountType, subAccountType, memo, id).then(result => {
 
         return result;
     }).then(e => {
